# career-kit

./: .coverage  .gitignore  DEVELOPMENT_JOURNAL.md  README.md  package-lock.json  package.json
.husky/: pre-commit  pre-push
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_analysis_history.py
backend/app/: main.py
backend/app/core/: __init__.py  config.py  dependencies.py  i18n.py  prompts.py  usage_logger.py
backend/app/middleware/: __init__.py  rate_limit.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/routers/: cover_letter.py  health.py  history.py  optimize.py  providers.py  research.py
backend/app/services/: language_detector.py  pdf_parser.py
backend/app/services/cache/: __init__.py  cache_service.py  hash_utils.py
backend/app/services/llm/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  openai.py
backend/app/services/research/: __init__.py  search_aggregator.py  synthesizer.py  website_scraper.py
backend/scripts/: setup-ec2.sh
backend/systemd/: ats-backend.service
backend/tests/: conftest.py  test_cache_service.py  test_config.py  test_cover_letter.py  test_factory.py  test_health.py  test_history.py  test_i18n.py  test_language_detector.py  test_optimize.py  test_pdf_parser.py  test_prompts.py  test_providers.py  test_rate_limit.py  test_research_endpoint.py  test_schemas.py  test_search_aggregator.py  test_synthesizer.py  test_usage_logging.py  test_website_scraper.py
backend/tests/fixtures/: not_a_pdf.txt
(+345 files in other folders)
