[project]
name = "ats-career-kit-backend"
version = "0.1.0"
description = "FastAPI backend for Career Kit."
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
