[project]
name = "ats-career-kit-backend"
version = "0.1.0"
description = "FastAPI backend for Career Kit."
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy Mapped: Optional/Dict for Python 3.9 compat (annotation eval at runtime)
"app/models/database.py" = ["UP035", "UP045", "UP006"]
# Pydantic schemas: Optional for Python 3.9 compat
"app/models/schemas.py" = ["UP045"]
# Cache service: Optional, timezone.utc for Python 3.9 compat
"app/services/cache/cache_service.py" = ["UP017", "UP035", "UP045", "UP006"]
# History router: Optional for Python 3.9 compat (FastAPI evaluates annotations)
"app/routers/history.py" = ["UP045"]
# Health router: timezone.utc for Python 3.9 compat (CI uses 3.12)
"app/routers/health.py" = ["UP017"]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-report=html --cov-fail-under=70"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
